blade/bookinfo/base/gedemo/multi-upstream/bookinfo-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: bookinfo
  namespace: gloo-system
spec:
  displayName: bookinfo
  sslConfig:
    secretRef:
      name: bookinfo
      namespace: gloo-system
    sniDomains:
    - bookinfo.jad.solo.io
  virtualHost:
    domains:
    - bookinfo.jad.solo.io
    routes:
    - matchers:
      - prefix: /
      routeAction:
        multi:
        multi:
          destinations:
          - weight: 50
            destination:
              upstream:
                name: bookinfo-productpage-9080
                namespace: gloo-system
          - weight: 50
            destination:
              upstream:
                name: bookinfo-productpage-v2-9080
                namespace: gloo-system
